--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -37,7 +37,12 @@
       <artifactId>jetty-annotations</artifactId>
       <version>${jetty.version}</version>
     </dependency>
-  </dependencies>
+    <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.8.6</version>
+    </dependency>    
+    </dependencies>
 
   <build>
     <plugins>
